# distro-release-notifier

./: .gitignore  CMakeLists.txt  Messages.sh  README  README.md  distro-release-notifier.desktop  distro-release-notifier.notifyrc  do-release-upgrade  releasechecker
icons/: CMakeLists.txt
po/ar/: distro-release-notifier.po
po/az/: distro-release-notifier.po
po/ca/: distro-release-notifier.po
po/ca@valencia/: distro-release-notifier.po
po/cs/: distro-release-notifier.po
po/de/: distro-release-notifier.po
po/el/: distro-release-notifier.po
po/en_GB/: distro-release-notifier.po
po/eo/: distro-release-notifier.po
po/es/: distro-release-notifier.po
po/et/: distro-release-notifier.po
po/eu/: distro-release-notifier.po
po/fi/: distro-release-notifier.po
po/fr/: distro-release-notifier.po
po/ga/: distro-release-notifier.po
po/gl/: distro-release-notifier.po
po/he/: distro-release-notifier.po
po/hi/: distro-release-notifier.po
po/hu/: distro-release-notifier.po
po/ia/: distro-release-notifier.po
po/id/: distro-release-notifier.po
po/is/: distro-release-notifier.po
po/it/: distro-release-notifier.po
po/ja/: distro-release-notifier.po
po/ka/: distro-release-notifier.po
po/ko/: distro-release-notifier.po
po/lt/: distro-release-notifier.po
po/lv/: distro-release-notifier.po
po/nb/: distro-release-notifier.po
po/nl/: distro-release-notifier.po
po/nn/: distro-release-notifier.po
po/pa/: distro-release-notifier.po
po/pl/: distro-release-notifier.po
po/pt/: distro-release-notifier.po
po/pt_BR/: distro-release-notifier.po
po/ro/: distro-release-notifier.po
po/ru/: distro-release-notifier.po
po/sa/: distro-release-notifier.po
po/sk/: distro-release-notifier.po
po/sl/: distro-release-notifier.po
po/sq/: distro-release-notifier.po
po/sv/: distro-release-notifier.po
po/tr/: distro-release-notifier.po
po/ug/: distro-release-notifier.po
po/uk/: distro-release-notifier.po
po/zh_CN/: distro-release-notifier.po
po/zh_TW/: distro-release-notifier.po
src/: CMakeLists.txt  config.h.cmake  dbusinterface.cpp  dbusinterface.h  distro-release-notifier.desktop  distro-release-notifier.json  distroreleasenotifier.cpp  distroreleasenotifier.h  distroreleasenotifierwindow.cpp  distroreleasenotifierwindow.h  main.cpp  module.cpp  notifier.cpp  notifier.h  org.example.distroreleasenotifier.appdata.xml  org.example.distroreleasenotifier.desktop  screensaverinhibitor.cpp  screensaverinhibitor.h  upgraderprocess.cpp  upgraderprocess.h  upgraderwatcher.cpp  upgraderwatcher.h
src/preview/: CMakeLists.txt  distro-preview-upgrade
